--- a/axit/scss/page/_contact.scss
+++ b/axit/scss/page/_contact.scss
@@ -8,16 +8,13 @@
     .container {
         text-align: center;
         .contact-title {
-            h2 {
+            h1 {
                 margin: 0;
             }
             .border {
-                margin: 25px 0;
-                border-bottom: solid 2px #ff8b38;
+                margin: 25px auto;
+                border-bottom: solid 2px  orange;
                 width: 65px;
-                position: absolute;
-                right: 50%;
-                @include css3-prefix('transform', 'translateX(50%)');
             }
             p {
                 color: #97979b;
