--- a/axit/scss/base/_typography.scss
+++ b/axit/scss/base/_typography.scss
@@ -30,11 +30,34 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Raleway-Regular';
+    src: url('../../fonts/Raleway-Regular.eot?#iefix') format('embedded-opentype'),  url('../../fonts/Raleway-Regular.woff') format('woff'), url('../../fonts/Raleway-Regular.ttf')  format('truetype'), url('../../fonts/Raleway-Regular.svg#Raleway-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Raleway-Light';
+    src: url('../../fonts/Raleway-Light.eot?#iefix') format('embedded-opentype'),  url('../../fonts/Raleway-Light.woff') format('woff'), url('../../fonts/Raleway-Light.ttf')  format('truetype'), url('../../fonts/Raleway-Light.svg#Raleway-Light') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'OpenSans-Bold';
+    src: url('../../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),  url('../../fonts/OpenSans-Bold.woff') format('woff'), url('../../fonts/OpenSans-Bold.ttf')  format('truetype'), url('../../fonts/OpenSans-Bold.svg#Raleway-Light') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+
 
 
 html, body {
-  font-size: 16px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   @media #{$info-tablet-big} {
     font-size: 15px;
