--- a/axit/scss/page/_pricing-option.scss
+++ b/axit/scss/page/_pricing-option.scss
@@ -29,9 +29,11 @@
             }
         }
         .clearfix {
+            display: inline-block;
             .basic {
                 text-align: center;
                 margin-top: 115px;
+                display: inherit;
                 //@include bp-ip6-plus {
                 //    margin-top: 20px;
                 //}
@@ -66,31 +68,36 @@
             .professional {
                 text-align: center;
                 margin-top: 40px;
-                .top-professional {
-                    border-bottom: 1px solid #ffffff;
-                    background-color: #333333;
-                    color: #ffffff;
-                    padding-bottom: 20px;
-                    padding-top: 20px;
-                }
-                img {
-                    max-width: 100%;
-                }
-                .bottom-professional {
-                    background-color: #333333;
-                    border-bottom: 5px solid #ff8b38;
-                    color: #666666;
-                    padding: 15px 0 40px 0;
-                }
-                .basic-row {
-                    background-color: #ffffff;
-                    border-bottom: 2px solid #f5f5f5;
-                    padding: 10px 0;
+                display: inherit;
+                .professional-wrap {
+                    //margin: 40px;
+                    .top-professional {
+                        border-bottom: 1px solid #ffffff;
+                        background-color: #333333;
+                        color: #ffffff;
+                        padding-bottom: 20px;
+                        padding-top: 20px;
+                    }
+                    img {
+                        max-width: 100%;
+                    }
+                    .bottom-professional {
+                        background-color: #333333;
+                        border-bottom: 5px solid #ff8b38;
+                        color: #666666;
+                        padding: 15px 0 40px 0;
+                    }
+                    .basic-row {
+                        background-color: #ffffff;
+                        border-bottom: 2px solid #f5f5f5;
+                        padding: 10px 0;
+                    }
                 }
             }
             .enterprise {
                 text-align: center;
                 margin-top: 115px;
+                display: inherit;
                 .enterprise-wrap {
                     .top-enterprise {
                         border-bottom: 1px solid #ffffff;
