--- a/axit/scss/layout/_header.scss
+++ b/axit/scss/layout/_header.scss
@@ -68,6 +68,7 @@
                                 font-size: 20px;
                                 margin-bottom: 15px;
                             }
+                            font-family: 'Raleway', sans-serif;
                         }
                         p {
                             margin: 35px 0 40px 0;
@@ -75,6 +76,8 @@
                             @include ip6plus {
                                 margin: 15px 0;
                             }
+                            font-family: 'Raleway-Light', sans-serif;
+
                         }
                         .border {
                             margin: 0;
@@ -115,6 +118,7 @@
                             background-color: #f5f5f5;
                             text-align: center;
                             padding: 15px 0;
+                            font-family: OpenSans-Bold, sans-serif;
                             @include ip6plus {
                                 padding: 10px 0;
                                 font-size: 14px;
@@ -188,6 +192,7 @@
                 font-size: 20px;
             }
             p {
+                font-size: 14px;
                 color: #86878b;
                 margin-bottom: 0;
             }
