--- a/axit/scss/page/_tab.scss
+++ b/axit/scss/page/_tab.scss
@@ -10,8 +10,6 @@
             border: none;
             text-align: center;
             li {
-                width: 110px;
-                height: 110px;
                 background-color: #000000;
                 border-bottom: 1px solid #ffffff;
                 margin: auto;
@@ -29,8 +27,12 @@
                 }
 
                 a {
+                    width: 110px;
+                    height: 110px;
+                    padding: 0;
+                    margin: 0;
                     color: #ffffff;
-                    margin: 30px auto;
+                    line-height: 110px;
                     background-color: transparent;
                     border: none;
                     &:focus {
